--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -43,6 +43,10 @@ main{
 
 
 /* CSS NAVBAR/HEADER */
+header{
+    background-color: #ffffff;
+}
+
 .navbar-toggler {
     padding: 0.25rem 0.75rem;
     font-size: 1.25rem;
